--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FUN Arena Cheb - Entertainment Centre</title>
   </head>
-  <body class="bg-black text-white">
+  <body class="bg-[#191919] text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
